# simple-kv

./: Cargo.toml  README.md  build.rs  kv.proto
src/: lib.rs  main.rs
src/client/: README.md  main.rs
src/handler/: client_codec.rs  codec.rs  mod.rs
src/pb/: kv.rs  mod.rs
src/store/: mod.rs
